@@ -8,9 +8,11 @@ tracked via Google Code at
 http://code.google.com/p/www-mechanize/issues/list
 
 [ENHANCEMENTS]
-Added $mech->html_lint_ok()
-
 Added $mech->post_ok().  Thanks, Greg Sheard.
+
+Added $mech->submit_form_ok().  Thanks, Mark Stosberg.
+
+Added $mech->html_lint_ok()
 
 
 1.14    Fri May 11 16:22:02 CDT 2007
